--- a/login/style.css
+++ b/login/style.css
@@ -1,7 +1,15 @@
 body {
   margin: 0;
   font-family: "Muli", sans-serif;
+  background-image: url(../static/img/bg3.jpg);
+  background-size: cover;
 }
+.background
+{
+    background-image: url(./static/img/bg3.jpg);
+    background-size: cover;
+}
+
 
 .header {
   width: 100%;
@@ -18,7 +26,7 @@ body {
 }
 
 .login {
-  background: linear-gradient(#A1C181, #FE7F2D);
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -129,7 +137,7 @@ body {
   align-items: center;
   height: 100px;
   width: 100%;
-  background: #FE7F2D;
+  
 }
 
 .footer a {
@@ -151,6 +159,11 @@ body {
     padding: 0px;
     width: 100%;
   }
+  body
+    {
+        background-image: url(../static/img/bg3Mobile.jpg);
+        background-size: cover;
+    }
 
   .footer {
     align-items: flex-start;
