--- a/login/style.css
+++ b/login/style.css
@@ -1,22 +1,14 @@
 body {
   margin: 0;
   font-family: "Muli", sans-serif;
-  background-image: url(../static/img/bg3.jpg);
-  background-size: cover;
 }
-.background
-{
-    background-image: url(./static/img/bg3.jpg);
-    background-size: cover;
-}
-
 
 .header {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 80px;
   background-color: #233D4D;
-  display: flex;
-  justify-content: space-between;
 }
 
 .header__img {
@@ -26,7 +18,7 @@ body {
 }
 
 .login {
-
+  background: linear-gradient(#A1C181, #FE7F2D);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -137,7 +129,7 @@ body {
   align-items: center;
   height: 100px;
   width: 100%;
-  
+  background: #FE7F2D;
 }
 
 .footer a {
@@ -159,12 +151,6 @@ body {
     padding: 0px;
     width: 100%;
   }
-  body
-    {
-        background-image: url(../static/img/bg3Mobile.jpg);
-        background-size: cover;
-    }
-
   .footer {
     align-items: flex-start;
     flex-direction: column;
