--- a/login/style.css
+++ b/login/style.css
@@ -8,7 +8,7 @@ body {
   justify-content: space-between;
   width: 100%;
   height: 80px;
-  background-color: #233D4D;
+  background: linear-gradient(#2A004B,#000000);;
 }
 
 .header__img {
@@ -18,12 +18,12 @@ body {
 }
 
 .login {
-  background: linear-gradient(#A1C181, #FE7F2D);
+  background: #5D1D99;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 0px 30px;
+  padding: 0px;
   min-height: calc(100vh - 200px);
 }
 
@@ -38,6 +38,7 @@ body {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
+  margin: 5px 0px;
 }
 
 .login__container--form {
@@ -129,7 +130,7 @@ body {
   align-items: center;
   height: 100px;
   width: 100%;
-  background: #FE7F2D;
+  background: linear-gradient(#2A004B,#000000);
 }
 
 .footer a {
