--- a/register/registro.css
+++ b/register/registro.css
@@ -2,12 +2,13 @@ body
 {
     margin: 0;
     font-family: 'Muli', sans-serif;
+    background-color: #5D1D99;
 }
 .header
 {
     width: 100%;
     height: 80px;
-    background-color: #233D4D;
+    background: linear-gradient(#2A004B,#000000);
     display: flex;
     justify-content: space-between;
 }
@@ -48,17 +49,18 @@ body
 }
 ::placeholder
 {
-    color: black;
+    color: whitesmoke;
     
 }
 .register
 {
-    background: linear-gradient(#A1C181,#FE7F2D);
+    background-color: #5D1D99;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     padding: 0px 30px;
+    margin: 15px 0px;
     min-height: calc(100vh - 200px);
 }
 .register__container
@@ -73,6 +75,7 @@ body
     display: flex;
     justify-content: space-around;
     flex-direction: column;
+    
 }
 
 .register__container--form
@@ -109,7 +112,7 @@ body
     align-items: center;
     height: 100px;
     width: 100%;
-    background: #FE7F2D;
+    background: linear-gradient(#2A004B,#000000);
 }
 .footer a
 {
